--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -14,10 +14,13 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - name: checkout repo
+      uses: actions/checkout@v2.3.4
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install pylint
+        pip install -r requirements.txt
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
