--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,6 +21,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install pylint
         pip install -r requirements.txt
+        python -m pip install pytest
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
+    - name: Test with PyTest
+      run: |
+        pytest
