--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -22,7 +22,7 @@ jobs:
         pip install pylint
         pip install -r requirements.txt
         python -m pip install pytest
-        apt-get install libmagic-dev
+        sudo apt-get install libmagic-dev
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
