--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -4,13 +4,14 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
+        platform: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ${{ matrix.platform }}
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python ${{ matrix.python-version }} on ${{ matrix.platform }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
